added a character reference

--- a/Resume.html
+++ b/Resume.html
@@ -84,6 +84,11 @@
       Copyright &copy; September 2023. Sic Parvis Magna. Ad Dei gloriam
     </footer>
     <!-- End of Footer -->
+    <!-- Character references -->
+    <section>
+      <h2>Character references</h2>
+      <p>Manolo Sanchez</p>
+    </section>
   </body>
 </html>
 
